<resources>
    <string name="app_name">Services</string>
    <string name="first_service">Service</string>
    <string name="foreground_service">Foregound Service</string>
    <string name="intent_service">intent service</string>
    <string name="job_dispatcher">job dispatcher</string>
    <string name="job_intent_service">job intent service</string>
    <string name="alarm_manager">alarm manager</string>
    <string name="work_manager">work manager</string>
</resources>