<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_first_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_service"/>

    <Button
        android:id="@+id/foreground_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"/>

    <Button
        android:id="@+id/intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service"/>

    <Button
        android:id="@+id/job_dispatcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler"/>

    <Button
        android:id="@+id/job_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service"/>

    <Button
        android:id="@+id/alarm_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager"/>
    <Button
        android:id="@+id/work_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager"/>

</LinearLayout>